--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 		<commons-lang3.versiion>3.12.0</commons-lang3.versiion>
 		<spring-cloud-starter-openfeign.version>4.0.3</spring-cloud-starter-openfeign.version>
 		<spring-cloud.version>2022.0.1</spring-cloud.version>
+		<springdoc-openapi-starter-webmvc-ui.version>2.0.0</springdoc-openapi-starter-webmvc-ui.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -86,6 +87,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-feign</artifactId>
 			<version>1.4.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc-openapi-starter-webmvc-ui.version}</version>
 		</dependency>
 
 	</dependencies>
