--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: admin-panel
   datasource:
-    url: jdbc:postgresql://localhost:5432/admindb
+    url: jdbc:postgresql://192.168.19.82:5438/postgres
     username: postgres
-    password: Aa123456
+    password: admin
   jpa:
     hibernate:
       ddl-auto: update
