admin control switch works in runtime

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,12 +13,6 @@ spring:
 server:
   port: 0
 
-app:
-  comments-and-votes-mode: all
-
-management:
-  endpoints:
-    web:
-      ecposure:
-        include=*:
-
+api:
+  capabilities:
+    adminControlSwitch=true:
